--- a/src/app/pages/movies-details/movies-details.page.html
+++ b/src/app/pages/movies-details/movies-details.page.html
@@ -7,7 +7,7 @@
 
 <ion-content>
   <ion-card *ngIf="movie$ | async as item">
-    <ion-img [src]="imgbaseUrl + '/w400' + item?.poster_path"></ion-img>
+    <img [src]="imgbaseUrl + '/w400' + item?.poster_path"/>
     <ion-card-header>
       <ion-card-title>
         {{item.title}}
