--- a/src/theme/variables.scss
+++ b/src/theme/variables.scss
@@ -4,7 +4,7 @@
 /** Ionic CSS Variables **/
 :root {
   /** primary **/
-  --ion-color-primary: #ffc409;
+  --ion-color-primary: #009c1a;
   --ion-color-primary-rgb: 255, 196, 9;
   --ion-color-primary-contrast: #000000;
   --ion-color-primary-contrast-rgb: 0, 0, 0;
@@ -83,7 +83,7 @@
    */
 
   body {
-    --ion-color-primary: #020201;
+    --ion-color-primary: #009c1a;
     --ion-color-primary-rgb: 255, 213, 52;
     --ion-color-primary-contrast: #ffffff;
     --ion-color-primary-contrast-rgb: 0, 0, 0;
@@ -153,13 +153,13 @@
    */
 
   .ios body {
-    --ion-background-color: #e8e8e8;
+    --ion-background-color: #242424;
 	--ion-background-color-rgb: 232,232,232;
 
-	--ion-text-color: #000000;
+	--ion-text-color: #ffffff;
 	--ion-text-color-rgb: 0,0,0;
 
-	--ion-color-step-50: #dcdcdc;
+	--ion-color-step-50: #333333;
 	--ion-color-step-100: #d1d1d1;
 	--ion-color-step-150: #c5c5c5;
 	--ion-color-step-200: #bababa;
@@ -179,9 +179,9 @@
 	--ion-color-step-900: #171717;
 	--ion-color-step-950: #0c0c0c;
 
-    --ion-item-background: #ffffff;
+    --ion-item-background: #252525;
 
-    --ion-card-background: #ffffff;
+    --ion-card-background: #000000;
   }
 
   .ios ion-modal {
@@ -227,7 +227,7 @@
 
     --ion-item-background: #1e1e1e;
 
-    --ion-toolbar-background: #1f1f1f;
+    --ion-toolbar-background: #3b3b3b;
 
     --ion-tab-bar-background: #1f1f1f;
 
