--- a/src/app/pages/movies/movies.page.html
+++ b/src/app/pages/movies/movies.page.html
@@ -14,6 +14,7 @@
       *ngFor="let item of movie;"
       [routerLink]="[item.id]"
       routerLinkActive="router-link-active"
+      detail="false"
     >
       <ion-avatar slot="start">
         <ion-img [src]="imgbaseUrl + '/w92' + item.poster_path"></ion-img>
