--- a/src/app/pages/movies-details/movies-details.page.html
+++ b/src/app/pages/movies-details/movies-details.page.html
@@ -11,7 +11,15 @@
   <ion-card *ngIf="movie$ | async as item">
     <ion-img [src]="imgbaseUrl + '/w780' + item?.poster_path"></ion-img>
     <ion-card-header>
-      <ion-card-title> {{item.title}} </ion-card-title>
+      <ion-card-title>
+        {{item.title}}
+        <ion-fab horizontal="end" vertical="top">
+          <ion-fab-button routerLink="/nowplaying/{{id}}/{{item.original_title}}">
+            <ion-icon name="play-outline"></ion-icon>
+          </ion-fab-button>
+          
+        </ion-fab>
+      </ion-card-title>
       <ion-card-subtitle> {{item.tagline}} </ion-card-subtitle>
       <ion-text>
         <span *ngFor="let genre of item.genres; let islast = last">
