--- a/src/app/pages/trailer/trailer.page.html
+++ b/src/app/pages/trailer/trailer.page.html
@@ -8,7 +8,7 @@
 
   <ion-content>
     <div>
-      <ion-img [src]="imgbaseUrl + '/w1280' + item.backdrop_path"></ion-img>
+      <ion-img [src]="imgbaseUrl + '/w1280' + item?.backdrop_path"></ion-img>
     </div>
     <div class="bd">
       <h1 class="tbd">Trailer</h1>
