--- a/src/app/pages/nowplaying/nowplaying.page.html
+++ b/src/app/pages/nowplaying/nowplaying.page.html
@@ -19,7 +19,7 @@
       </ion-avatar>
 
       <ion-label>
-        <h1>{{item.title}}</h1>
+        {{item.title}}
         <p>{{item.release_date | date: 'yyyy/MM/dd'}}</p>
       </ion-label>
 
