now playing and upcoming

--- a/src/app/pages/movies/movies.page.html
+++ b/src/app/pages/movies/movies.page.html
@@ -8,6 +8,15 @@
 </ion-header>
 
 <ion-content>
+  <ion-refresher slot="fixed" (ionRefresh)="handleRefresh($event)">
+    <ion-refresher-content
+      pullingIcon="chevron-down-circle-outline"
+      pullingText="Pull to refresh"
+      refreshingSpinner="circles"
+      refreshingText="Refreshing...">
+    </ion-refresher-content>
+  </ion-refresher>
+
   <ion-list>
     <ion-item
       button
@@ -48,11 +57,15 @@
             <ion-icon slot="start" name="play-circle-outline"></ion-icon>
             <ion-label> Now playing </ion-label>
           </ion-item>
-          <ion-item button>
+          <ion-item button routerLink="/upcoming">
+            <ion-icon slot="start" name="videocam-outline"></ion-icon>
+            <ion-label> Upcoming </ion-label>
+          </ion-item>
+          <ion-item button routerLink="/recommendations">
             <ion-icon slot="start" name="document-text-outline"></ion-icon>
             <ion-label> Recommendations </ion-label>
           </ion-item>
-          <ion-item button>
+          <ion-item button routerLink="/toprated">
             <ion-icon slot="start" name="happy-outline"></ion-icon>
             <ion-label> Top-rated </ion-label>
           </ion-item>
