--- a/src/theme/variables.scss
+++ b/src/theme/variables.scss
@@ -173,7 +173,7 @@
 	--ion-color-step-600: #5d5d5d;
 	--ion-color-step-650: #515151;
 	--ion-color-step-700: #464646;
-	--ion-color-step-750: #3a3a3a;
+	--ion-color-step-750: #ddc6c6;
 	--ion-color-step-800: #2e2e2e;
 	--ion-color-step-850: #232323;
 	--ion-color-step-900: #171717;
