now playing and upcoming

--- a/src/app/pages/recommendations/recommendations.page.html
+++ b/src/app/pages/recommendations/recommendations.page.html
@@ -1,7 +1,7 @@
 <ion-header>
   <ion-toolbar>
     <ion-buttons>
-      <ion-back-button defaultHref="/movies"></ion-back-button>
+      <ion-back-button slot="start" defaultHref="/movies"></ion-back-button>
     </ion-buttons>
     <ion-title>recommendations</ion-title>
   </ion-toolbar>
