--- a/src/app/pages/toprated/toprated.page.html
+++ b/src/app/pages/toprated/toprated.page.html
@@ -1,7 +1,7 @@
 <ion-header>
   <ion-toolbar>
     <ion-buttons>
-      <ion-back-button defaultHref="/movies"></ion-back-button>
+      <ion-back-button slot="start" defaultHref="/movies"></ion-back-button>
       </ion-buttons>
     <ion-title>toprated</ion-title>
   </ion-toolbar>
