now playing and upcoming

--- a/src/app/pages/recommendations/recommendations.page.html
+++ b/src/app/pages/recommendations/recommendations.page.html
@@ -1,12 +1,10 @@
 <ion-header>
   <ion-toolbar>
-    <ion-buttons>
-      <ion-back-button slot="start" defaultHref="/movies"></ion-back-button>
+    <ion-buttons slot="start">
+      <ion-back-button defaultHref="/movies"></ion-back-button>
     </ion-buttons>
     <ion-title>recommendations</ion-title>
   </ion-toolbar>
 </ion-header>
 
-<ion-content>
-
-</ion-content>
+<ion-content> </ion-content>
