now playing and upcoming

--- a/src/app/pages/movies/movies.page.html
+++ b/src/app/pages/movies/movies.page.html
@@ -26,7 +26,7 @@
       detail="false"
     >
       <ion-avatar slot="start">
-        <ion-img [src]="imgbaseUrl + '/w92' + item.poster_path"></ion-img>
+        <ion-img lazy [src]="imgbaseUrl + '/w92' + item.poster_path"></ion-img>
       </ion-avatar>
 
       <ion-label>
@@ -55,11 +55,11 @@
         <ion-list>
           <ion-item button routerLink="/nowplaying">
             <ion-icon slot="start" name="play-circle-outline"></ion-icon>
-            <ion-label> Now playing </ion-label>
+            <ion-label> Now playing in cinema</ion-label>
           </ion-item>
           <ion-item button routerLink="/upcoming">
             <ion-icon slot="start" name="videocam-outline"></ion-icon>
-            <ion-label> Upcoming </ion-label>
+            <ion-label> Upcoming movies</ion-label>
           </ion-item>
           <ion-item button routerLink="/recommendations">
             <ion-icon slot="start" name="document-text-outline"></ion-icon>
@@ -67,7 +67,7 @@
           </ion-item>
           <ion-item button routerLink="/toprated">
             <ion-icon slot="start" name="happy-outline"></ion-icon>
-            <ion-label> Top-rated </ion-label>
+            <ion-label> Top-rated movies</ion-label>
           </ion-item>
         </ion-list>
       </ion-content>
