--- a/src/app/pages/toprated/toprated.page.html
+++ b/src/app/pages/toprated/toprated.page.html
@@ -3,7 +3,7 @@
     <ion-buttons slot="start">
       <ion-back-button defaultHref="/movies"></ion-back-button>
     </ion-buttons>
-    <ion-title>toprated</ion-title>
+    <ion-title>Top-rated movies</ion-title>
   </ion-toolbar>
 </ion-header>
 
