--- a/src/app/pages/movies-details/movies-details.page.html
+++ b/src/app/pages/movies-details/movies-details.page.html
@@ -9,7 +9,7 @@
 
 <ion-content>
   <ion-card *ngIf="movie$ | async as item">
-    <ion-img [src]="imgbaseUrl + '/w780' + item?.poster_path"></ion-img>
+    <ion-img lazy [src]="imgbaseUrl + '/w780' + item?.poster_path"></ion-img>
     <ion-fab horizontal="center" vertical="center">
       <ion-fab-button routerLink="/nowplaying/{{id}}/{{item.original_title}}">
         <ion-icon name="play-outline"></ion-icon>
