--- a/src/app/pages/recommendations/recommendations.page.html
+++ b/src/app/pages/recommendations/recommendations.page.html
@@ -3,7 +3,7 @@
     <ion-buttons slot="start">
       <ion-back-button defaultHref="/movies"></ion-back-button>
     </ion-buttons>
-    <ion-title>recommendations</ion-title>
+    <ion-title>Recommendations</ion-title>
   </ion-toolbar>
 </ion-header>
 
